# eu-cloud-directory

./: Makefile  README.md  build.py  pyproject.toml
src/app/: build.py  cli.py  load.py
templates/: _layout.j2  index.j2  provider.j2
vite/: package.json  postcss.config.js  style.css  tailwind.config.js
